...
        rangeDatePicker.datePickerMode = .range
        rangeDatePicker.action = #selector(self.rangeDatePickerAction(_:))
        rangeDatePicker.setAccessibilityIdentifier("range_picker")
        
        startDatePicker.datePickerStyle = .textField
        startDatePicker.action = #selector(self.endpointPickerChanged(_:))
        startDatePicker.setAccessibilityIdentifier("start_date_picker")
        
        endDatePicker.datePickerStyle = .textField
        endDatePicker.action = #selector(self.endpointPickerChanged(_:))
        endDatePicker.setAccessibilityIdentifier("end_date_picker")
        
        if #available(macOS 10.15.4, *) {
            startDatePicker.presentsCalendarOverlay = true
            endDatePicker.presentsCalendarOverlay = true
        }
        let okButton = NSButton(title: "ok", target: self, action: #selector(self.submit(_:)))
        okButton.setAccessibilityIdentifier("apply_range_button")
        
        okButton.controlSize = .small
        [startDatePicker, endDatePicker].forEach {$0.font = NSFont.labelFont(ofSize: NSFont.systemFontSize(for: .small))}
        
        func gridLabel(_ label: String) -> NSView {
            return NSTextField(labelWithAttributedString: NSAttributedString(string: label, attributes: [
...
            if expanded {
                self.window?.makeFirstResponder(self.startDatePicker)
            } else if let windowView = self.window?.contentView {
                self.window?.makeFirstResponder(windowView)
            }
        }
        disclosure.setAccessibilityIdentifier("toggle_endpoint_pickers")
        
        let vStack = NSStackView(orientation: .vertical)
        vStack.alignment = .leading
        vStack.addArrangedSubview(rangeDatePicker)
        vStack.addArrangedSubview(disclosure)
        vStack.addArrangedSubview(stepperGrid)
...
