...
                return true
            }
            let confirm = NSAlert()
            confirm.alertStyle = .warning
            confirm.messageText = "Save \(goalsCount.pluralize("goal", "goals", showValue: false))?"
            confirm.informativeText = "You entered \(goalsCount.pluralize("goal", "goals"))."
            confirm.addButton(withTitle: "Save")
            confirm.addButton(withTitle: "Don't Save")
            confirm.beginSheetModal(for: window) {response in
                self.saveGoalsOnExit = (response == .alertFirstButtonReturn)
                self.closeWindowAsync()
            }
            return false
        } else {
...
