...
        addButton.controlSize = .small
        addButton.font = GoalsView.small_control_font
        addButton.expandCollapseHook = self.handleAddButtonExpansionOrCollapse
        addButton.goalHook = self.addGoalFrom(text:)
        layOutElements()
        setAccessibilityRole(.group)
        setAccessibilityLabel("Goals for today")
    }
    
    func reset() {
        layOutElements()
    }
    
...
            }
            child.removeFromSuperview()
        }
        
        // set up our first hstack, and then start looping
        createRow()
        let sectionLabel = NSTextField(labelWithAttributedString: NSAttributedString(string: "Goals", attributes: [
            .foregroundColor: NSColor.placeholderTextColor,
            .font: GoalsView.small_control_font
        ]))
        sectionLabel.setContentCompressionResistancePriority(.required, for: .horizontal)
        currentRow.addArrangedSubview(sectionLabel)
        currentRow.addArrangedSubview(Spacer())
...
